# stashy

./: .gitignore  README.md  docker-compose.yml  llm.text
cpp/: CMakeLists.txt
cpp/src/: db.cpp  db.hpp  engine.cpp  engine.hpp  fetcher.cpp  fetcher.hpp  main.cpp
db/: init.sql
mini_crawl_compare/: README.md  benchmark_and_plot.py  compare_runs.py  extract_batch.py  requirements.txt  urls.txt
mini_crawl_compare/cpp/: crawl.cpp
mini_crawl_compare/report/: summary.tsv
mini_crawl_compare/rust/: Cargo.toml
mini_crawl_compare/rust/src/: main.rs
python/: pyproject.toml  requirements.txt
python/stashy/: __init__.py  cli.py  config.py  crawler.py  db.py  dom_analyzer.py  frontier.py  infra_demo.py  worker.py
python/tests/: test_frontier.py
